# tensaku

./: .gitignore  .gitignore.bak  README.md  bug_by_data.txt  compare.txt  multirun.yaml  nohup.out  pyproject.toml  ranking.txt  run_all.md  run_all.sh  run_exp.sh  run_exp_seq.sh  test.py  tree.txt
artifacts/: index.jsonl
configs/: config.yaml  exp_al_hitl.yaml  exp_debug.yaml  exp_standard.yaml
configs/al/: base.yaml  few_cycle.yaml
configs/cleaner/: base.yaml  debug.yaml  keep_ckpt.yaml
configs/cleanup/: base.yaml
configs/confidence/: default.yaml  trust.yaml
configs/data/: Y14_1-2_1_3.yaml  Y14_1-2_2_4.yaml  Y14_2-1_1_5.yaml  Y14_2-1_2_3.yaml  Y14_2-2_1_4.yaml  Y14_2-2_2_3.yaml  base.yaml  debug.yaml  patch_split_subdir.yaml
configs/dataset/: base.yaml
configs/debug.yaml/: standard.yaml
configs/gate/: default.yaml
configs/infer/: base.yaml
configs/model/: bert.yaml
configs/qid/: Y14_1-2_1_3.yaml
configs/run/: base.yaml  debug.yaml
configs/split/: base.yaml  few_shot.yaml  ratio_l20_p50_t20_d10.yaml  standard.yaml
configs/task/: sas.yaml  standard_supervised.yaml
configs/train/: debug.yaml  standard.yaml
configs/viz/: preset.yaml
docs/: MEMO_TENSAKU.md
scripts/: backfill_experiment_index.py  run_al_generic.sh  run_al_grid.py  run_all.sh  run_batch.sh  run_experiments.sh  run_qid.sh  run_split_all.py  run_viz_preset.py  smoke_integration.sh  start.sh  tensaku.code-workspace  viz_single_run.py
scripts/core/: al.sh  hitl.sh  run_al.sh  (+1 more)
selection/: al_samples_all.csv
src/: main.py
tools/: monitor_tensaku.py  summarize_memlog.py
(+108 files in other folders)
